--- a/index.html
+++ b/index.html
@@ -18,11 +18,19 @@
       </div>
       <div id="unity-warning"> </div>
       <div id="unity-footer">
+        <div id="cssDisplay">
+          Descripción: 
+El siguiente juego muestra un museo de Tom Hiddleston donde se pueden apreciar diferentes trabajos qué ha llevado acabo
+          </div>
+          <div id="cssDisplay">
+            Controles: las flechas son para moverse y la perspectiva se mueve con el mouse
+            </div>
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
         <div id="unity-build-title">trabajo</div>
       </div>
     </div>
+
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
@@ -117,5 +125,7 @@
       };
       document.body.appendChild(script);
     </script>
+    
   </body>
+
 </html>
